# nova-code

./: README.md  plan.md  pyproject.toml  setup-env.sh
src/nova_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/novacode/: cli.py  client.py  storage.py
src/novacode/commands/: ask.py  chat.py  serve.py
src/novacode/core/: __init__.py  ask.py  session.py  stdio.py
src/novacode/tools/: __init__.py  bash.py  edit.py  glob_tool.py  grep.py  ls.py  multi_edit.py  notebook_edit.py  notebook_read.py  read.py  todo_read.py  todo_write.py  web_fetch.py  web_search.py  write.py
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: chatPanel.ts  extension.ts  novaProcess.ts
