[project]
name = "nova-code"
version = "0.1.0"
description = "Nova Code - An AI coding assistant CLI powered by Amazon Bedrock Nova models"
dependencies = [
    "click>=8.1.0",
    "boto3>=1.34.0",
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "rich>=13.0.0",
]

[project.scripts]
nova = "novacode.cli:main"
